tests/checker/diagnostics/0261_fun_monomorphic_int_bool_use_03.ml.infer.expected
File "0261_fun_monomorphic_int_bool_use_03.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0261_fun_monomorphic_int_bool_use_03 is not a valid module name.

File "0261_fun_monomorphic_int_bool_use_03.ml", line 1, characters 26-30:
1 | let use_gamma f = (f 2, f true)
                              ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
