tests/checker/diagnostics/0261_fun_monomorphic_int_bool_use_03.ml
let use_gamma f = (f 2, f true)
